--- a/Views/Reporte/AdministracionReportes.cshtml
+++ b/Views/Reporte/AdministracionReportes.cshtml
@@ -1,5 +1,9 @@
-﻿<link rel="stylesheet" href="~/css/Estilos.css" />
-@model IEnumerable<JarredsOrderHub.Models.Reporte>
+﻿@model IEnumerable<JarredsOrderHub.Models.Reporte>
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+<link rel="stylesheet" href="~/css/Estilos.css" />
+<link rel="stylesheet" href="~/css/dataTable.css" />
 
 <style>
     .btn {
@@ -32,7 +36,8 @@
 <!-- Tabla de Reportes -->
 <h1 class="titulo-tabla">Administración de Reportes</h1>
 
-<table>
+<div class="contenedor-tabla">
+<table id="tabla">
     <thead>
         <tr>
             <th>ID</th>
@@ -68,7 +73,7 @@
         }
     </tbody>
 </table>
-
+</div>
 <!-- Modal para ver detalles -->
 <div id="detallesModal" class="modal" style="display:none;">
     <div class="modal-content">
@@ -93,6 +98,12 @@
         <button onclick="actualizarEstado()">Guardar</button>
     </div>
 </div>
+
+<!-- Incluir jQuery -->
+<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+<!-- Incluir DataTables JS -->
+<script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+
 
 <script>
     // Función para ver detalles del reporte
@@ -142,4 +153,32 @@
             alert("Error actualizando estado.");
         }
     }
+
+
+    $('#tabla').DataTable({
+        "order": [[0, "asc"]],
+        "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.13.6/i18n/es-ES.json"
+        },
+        "dom": "<'dataTables_wrapper'<'dataTables_top'<'dataTables_length'l><'dataTables_filter'f>>r>t<'dataTables_bottom'<'dataTables_info'i><'dataTables_paginate'p>>",
+        "responsive": true,
+        "autoWidth": false,
+        "initComplete": function (settings, json) {
+            // Añadir clase personalizada a los inputs
+            $('.dataTables_filter input').addClass('search-input');
+            $('.dataTables_length select').addClass('custom-select');
+        },
+        "columnDefs": [{
+            "orderable": true,
+            "targets": '_all'
+        }],
+        "drawCallback": function (settings) {
+            // Ajustar posición de la paginación después de dibujar
+            $('.dataTables_paginate').css({
+                'display': 'flex',
+                'justify-content': 'center',
+                'width': '100%'
+            });
+        }
+    });
 </script>
