--- a/Views/Admin/AdministrarEmpleados.cshtml
+++ b/Views/Admin/AdministrarEmpleados.cshtml
@@ -1,11 +1,14 @@
-﻿<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 <link rel="stylesheet" href="~/css/Estilos.css" />
+<link rel="stylesheet" href="~/css/dataTable.css" />
 
-<body>
 <h1 class="titulo-tabla">Empleados</h1>
 
 <!-- Tabla de Empleados -->
-<table id="employeeTable">
+<div class="contenedor-tabla">
+<table id="tabla">
     <thead>
         <tr>
             <th>ID</th>
@@ -47,6 +50,7 @@
         <i class="fa-solid fa-user-plus"></i>
     Añadir Empleado</button>
 
+</div>
 <!-- Modal para añadir/editar empleado -->
 <div id="employeeModal" class="modal">
     <div class="modal-content">
@@ -84,7 +88,13 @@
         </form>
     </div>
 </div>
-</body>
+
+
+  <!-- Incluir jQuery -->
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+  <!-- Incluir DataTables JS -->
+  <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+
 <script>
     let isEditMode = false;
 
@@ -186,5 +196,33 @@
         document.getElementById("employeeForm").reset();
         isEditMode = false;
     }
+
+    $('#tabla').DataTable({
+        "order": [[0, "asc"]],
+        "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.13.6/i18n/es-ES.json"
+        },
+        "dom": "<'dataTables_wrapper'<'dataTables_top'<'dataTables_length'l><'dataTables_filter'f>>r>t<'dataTables_bottom'<'dataTables_info'i><'dataTables_paginate'p>>",
+        "responsive": true,
+        "autoWidth": false,
+        "initComplete": function (settings, json) {
+            // Añadir clase personalizada a los inputs
+            $('.dataTables_filter input').addClass('search-input');
+            $('.dataTables_length select').addClass('custom-select');
+        },
+        "columnDefs": [{
+            "orderable": true,
+            "targets": '_all'
+        }],
+        "drawCallback": function (settings) {
+            // Ajustar posición de la paginación después de dibujar
+            $('.dataTables_paginate').css({
+                'display': 'flex',
+                'justify-content': 'center',
+                'width': '100%'
+            });
+        }
+    });
+
 
 </script>
