--- a/Views/Admin/AdministrarRoles.cshtml
+++ b/Views/Admin/AdministrarRoles.cshtml
@@ -1,15 +1,16 @@
-﻿<link rel="stylesheet" href="~/css/Estilos.css" />
-@model List<JarredsOrderHub.Models.Rol>
-
+﻿@model List<JarredsOrderHub.Models.Rol>
 @{
-    ViewData["Title"] = "Administrar Roles";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<link rel="stylesheet" href="~/css/Estilos.css" />
+<link rel="stylesheet" href="~/css/dataTable.css" />
 
 
 <h1 class="titulo-tabla"> Roles</h1>
 
 <!-- Tabla de Roles -->
-<table>
+<div class="contenedor-tabla">
+<table id="tabla">
     <thead>
         <tr>
             <th>ID</th>
@@ -43,6 +44,7 @@
 <button id="addRoleBtn" class="btn-add-role">
     Añadir Rol
 </button>
+</div>
 
 <div id="permissionsModal" class="modal">
     <div class="modal-content">
@@ -103,6 +105,12 @@
         </form>
     </div>
 </div>
+
+<!-- Incluir jQuery -->
+<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+<!-- Incluir DataTables JS -->
+<script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+
 
 <script>
     const roleModal = document.getElementById("roleModal");
@@ -293,4 +301,31 @@
             permissionsModal.style.display = "none";
         }
     }
+
+    $('#tabla').DataTable({
+        "order": [[0, "asc"]],
+        "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.13.6/i18n/es-ES.json"
+        },
+        "dom": "<'dataTables_wrapper'<'dataTables_top'<'dataTables_length'l><'dataTables_filter'f>>r>t<'dataTables_bottom'<'dataTables_info'i><'dataTables_paginate'p>>",
+        "responsive": true,
+        "autoWidth": false,
+        "initComplete": function (settings, json) {
+            // Añadir clase personalizada a los inputs
+            $('.dataTables_filter input').addClass('search-input');
+            $('.dataTables_length select').addClass('custom-select');
+        },
+        "columnDefs": [{
+            "orderable": true,
+            "targets": '_all'
+        }],
+        "drawCallback": function (settings) {
+            // Ajustar posición de la paginación después de dibujar
+            $('.dataTables_paginate').css({
+                'display': 'flex',
+                'justify-content': 'center',
+                'width': '100%'
+            });
+        }
+    });
 </script>
