--- a/Views/Catalogo/AdministrarCupones.cshtml
+++ b/Views/Catalogo/AdministrarCupones.cshtml
@@ -1,13 +1,16 @@
-﻿<link rel="stylesheet" href="~/css/Estilos.css" />
-@model List<JarredsOrderHub.Models.Cupon>
+﻿@model List<JarredsOrderHub.Models.Cupon>
 
 @{
     ViewData["Title"] = "Administrar Cupones";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<link rel="stylesheet" href="~/css/Estilos.css" />
+<link rel="stylesheet" href="~/css/dataTable.css" />
 
 <h1 class="titulo-tabla">Cupones</h1>
 
 <!-- Tabla de Cupones -->
+<div class="contenedor-tabla">
 <table id="cuponTable">
     <thead>
         <tr>
@@ -45,6 +48,7 @@
 <button id="addCuponBtn" class="add-category">
     Añadir Cupon
 </button>
+</div>
 
 <!-- Modal para Añadir/Editar Cupon -->
 <div id="cuponModal" class="modal">
@@ -77,6 +81,11 @@
         </form>
     </div>
 </div>
+
+<!-- Incluir jQuery -->
+<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+<!-- Incluir DataTables JS -->
+<script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
 
 <script>
     let cuponEditandoId = null;
@@ -226,5 +235,31 @@
         }
     }
 
+    $('#cuponTable').DataTable({
+        "order": [[0, "asc"]],
+        "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.13.6/i18n/es-ES.json"
+        },
+        "dom": "<'dataTables_wrapper'<'dataTables_top'<'dataTables_length'l><'dataTables_filter'f>>r>t<'dataTables_bottom'<'dataTables_info'i><'dataTables_paginate'p>>",
+        "responsive": true,
+        "autoWidth": false,
+        "initComplete": function (settings, json) {
+            // Añadir clase personalizada a los inputs
+            $('.dataTables_filter input').addClass('search-input');
+            $('.dataTables_length select').addClass('custom-select');
+        },
+        "columnDefs": [{
+            "orderable": true,
+            "targets": '_all'
+        }],
+        "drawCallback": function (settings) {
+            // Ajustar posición de la paginación después de dibujar
+            $('.dataTables_paginate').css({
+                'display': 'flex',
+                'justify-content': 'center',
+                'width': '100%'
+            });
+        }
+    });
 </script>
 
