--- a/Views/Pago/HistorialPagosPedidosAdministracion.cshtml
+++ b/Views/Pago/HistorialPagosPedidosAdministracion.cshtml
@@ -1,45 +1,17 @@
-﻿<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+<link rel="stylesheet" href="~/css/Estilos.css" />
+<link rel="stylesheet" href="~/css/dataTable.css" />
 <link rel="stylesheet" href="~/css/AdminPagos.css" />
 @model List<Pago>
 
-<header>
-    <h1>Historial de Pagos</h1>
-</header>
+    <h1 class="titulo-tabla"> Historial de Pagos</h1>
 
-<!-- Filtros -->
-<div class="filtros">
-    <label for="fechaInicio">Fecha de Inicio</label>
-    <input type="date" id="fechaInicio" onchange="aplicarFiltros()">
+<div class="contenedor-tabla">
 
-    <label for="fechaFin">Fecha de Fin</label>
-    <input type="date" id="fechaFin" onchange="aplicarFiltros()">
-
-    <label for="metodoPago">Método de Pago</label>
-    <select id="metodoPago" onchange="aplicarFiltros()">
-        <option value="">Todos</option>
-        <option value="Efectivo">Efectivo</option>
-        <option value="Tarjeta de Crédito">Tarjeta de Crédito</option>
-        <option value="PayPal">PayPal</option>
-    </select>
-
-    <label for="estadoPago">Estado del Pago</label>
-    <select id="estadoPago" onchange="aplicarFiltros()">
-        <option value="">Todos</option>
-        <option value="Pagado">Pagado</option>
-        <option value="Pendiente">Pendiente</option>
-    </select>
-</div>
-
-@if (Model.Count == 0)
-{
-    <div class="no-pagos text-center" style="margin:30px 0px;">
-        <p>Aún no existen pagos registrados.</p>
-    </div>
-}
-else
-{
     <!-- Tabla de pagos -->
-    <table class="tabla-pagos">
+    <table id="tabla" class="tabla-pagos">
         <thead>
             <tr>
                 <th>Pedido ID</th>
@@ -79,8 +51,8 @@ else
             }
         </tbody>
     </table>
-}
 
+</div>
 <!-- Modal de Detalles del Pedido -->
 <div id="modalDetalles" class="modal">
     <div class="modal-content">
@@ -103,6 +75,12 @@ else
         <button onclick="reenviarFacturaConfirmado()">Enviar Factura</button>
     </div>
 </div>
+
+  <!-- Incluir jQuery -->
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+  <!-- Incluir DataTables JS -->
+  <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+
 
 <script>
     function aplicarFiltros() {
@@ -207,4 +185,33 @@ else
             cerrarModal();
         }
     }
+
+    $('#tabla').DataTable({
+        "order": [[0, "asc"]],
+        "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.13.6/i18n/es-ES.json"
+        },
+        "dom": "<'dataTables_wrapper'<'dataTables_top'<'dataTables_length'l><'dataTables_filter'f>>r>t<'dataTables_bottom'<'dataTables_info'i><'dataTables_paginate'p>>",
+        "responsive": true,
+        "autoWidth": false,
+        "initComplete": function (settings, json) {
+            // Añadir clase personalizada a los inputs
+            $('.dataTables_filter input').addClass('search-input');
+            $('.dataTables_length select').addClass('custom-select');
+        },
+        "columnDefs": [{
+            "orderable": true,
+            "targets": '_all'
+        }],
+        "drawCallback": function (settings) {
+            // Ajustar posición de la paginación después de dibujar
+            $('.dataTables_paginate').css({
+                'display': 'flex',
+                'justify-content': 'center',
+                'width': '100%'
+            });
+        }
+    });
+
+
 </script>
