--- a/wwwroot/css/Carrito.css
+++ b/wwwroot/css/Carrito.css
@@ -475,6 +475,35 @@
 
 
 /*Modales*/
+
+.modal-mapa {
+    display: none; /* Se muestra al activarse */
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-mapa-content {
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 20px;
+    position: relative;
+}
+
+.modal-mapa .close {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 24px;
+    cursor: pointer;
+}
+
 .modal {
     display: none;
     position: fixed;
@@ -564,3 +593,4 @@
         transform: translateY(0);
     }
 }
+
