--- a/wwwroot/css/Pedidos.css
+++ b/wwwroot/css/Pedidos.css
@@ -1,11 +1,4 @@
-﻿body {
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #ffffff; /* Color de fondo principal */
-    color: #262626; /* Color de texto principal */
-}
-
+﻿
 /* --- Contenedor principal --- */
 .perfil-container {
     background-color: #fff; /* Fondo blanco */
@@ -40,7 +33,7 @@
 }
 
 
-.container {
+.container-estado-pedido {
     display: flex;
     flex-direction: column;
     align-items: center;
